--- a/package.json
+++ b/package.json
@@ -7,20 +7,31 @@
     "watch": "concurrently \"npm run ts:watch\" \"npm run serve\"",
     "build": "npm run ts:build",
     "prod:serve": "node dist/server.js",
+    "prestart": "ts-node tools/copyAssets",
     "start": "npm run build && npm run prod:serve",
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
   "dependencies": {
     "@types/express": "^4.0.36",
-    "@types/node": "^8.0.16",
+    "@types/pg": "^7.4.14",
     "@types/winston": "^2.3.4",
+    "ejs": "^2.6.1",
     "express": "^4.15.3",
+    "pg": "^7.10.0",
     "typescript": "^2.4.2",
     "winston": "^2.3.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "^5.1.0",
+    "@types/node": "^8.10.48",
+    "@types/shelljs": "^0.8.5",
     "concurrently": "^3.5.0",
-    "nodemon": "^1.11.0",
+    "fs-extra": "^7.0.1",
+    "nodemon": "^1.19.0",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.3",
+    "shelljs": "^0.8.3",
+    "ts-node": "^8.1.0",
     "tslint": "^5.5.0"
   }
 }
